(#1977) CTHP link block item spacing fix

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/entrypoints/cthp/CTHP.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/entrypoints/cthp/CTHP.scss
@@ -238,7 +238,7 @@
   }
 }
 
-.cthpCard .rawHtml .cardBody {
+.cthpCard .cardBody {
   p {
     margin-top: 2px;
   }
